2010-07-12  François Sausset  <sausset@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Update tests to check that msqrt and mfrac use style color to draw themselves
        https://bugs.webkit.org/show_bug.cgi?id=41889

        * mathml/presentation/fractions.xhtml:
        * mathml/presentation/roots.xhtml:
        * platform/mac/mathml/presentation/fractions-expected.checksum:
        * platform/mac/mathml/presentation/fractions-expected.png:
        * platform/mac/mathml/presentation/fractions-expected.txt:
        * platform/mac/mathml/presentation/roots-expected.checksum:
        * platform/mac/mathml/presentation/roots-expected.png:
        * platform/mac/mathml/presentation/roots-expected.txt:
2010-07-12  François Sausset  <sausset@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        Fix a bug preventing msqrt and mfrac to use style color to draw themselves.
        In mfrac, the fraction bar is now using the color defined by the element style instead of black.
        In msqrt, the radical was always drawn in black due to a colorSpace problem.
        https://bugs.webkit.org/show_bug.cgi?id=41889

        Test: mathml/presentation/roots.xhtml
        Test: mathml/presentation/fractions.xhtml

        * mathml/RenderMathMLFraction.cpp:
        (WebCore::RenderMathMLFraction::paint):
        * mathml/RenderMathMLSquareRoot.cpp:
        (WebCore::RenderMathMLSquareRoot::paint):

Canonical link: https://commits.webkit.org/53942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63074 268f45cc-cd09-0410-ab3c-d52691b4dbfc